ajout de la partie filtres avec transition + changment sur le clique de la nav

--- a/P2_PAYS_code/css/header.css
+++ b/P2_PAYS_code/css/header.css
@@ -22,12 +22,12 @@ nav {
     align-items: flex-end;
 }
 
-.active{
-    color: #0065FC;
-}
-
 .element_nav_active {
     border-top: 2px solid #0065FC;
+}
+
+.element_nav_active>a{
+    color: #0065FC;
 }
 
 #container_logo{
