--- a/P2_PAYS_code/css/search.css
+++ b/P2_PAYS_code/css/search.css
@@ -1,5 +1,5 @@
 
-#recherche {
+.recherche {
     display: flex;
     flex-direction: row;
     height: 53px;
@@ -8,12 +8,12 @@
     font-size: 120% ;
 }
 
-#container_inputs{
+.container_inputs{
     display: flex;
     
 }
 
-#separateur_inputs{
+.separateur_inputs{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,7 +21,7 @@
     border-top: solid 2px #F2F2F2;
 }
 
-#container_icon_localisation{
+.container_icon_localisation{
     display: flex;
     width: 50px;
     background-color: #F2F2F2;
@@ -31,33 +31,33 @@
     border-radius: 15px 0px 0px 15px;
 }
 
-#container_inputs>input {
+.container_inputs>input {
     border:none;
     border-top: solid 2px #F2F2F2;
     width: 110px;
     border-bottom: solid 2px #F2F2F2;
     font-family: "relaway_bold";
     font-size: 18px ;
-    color: #000;
+    color: .000;
     padding: 5px 0px;
 }
 
-#container_inputs>input::placeholder {
+.container_inputs>input::placeholder {
     font-family: "relaway_bold";
     font-size: 18px ;
     
 }
 
-#ville {
+.ville {
     text-align: right;
     padding: 0px 0px 0px 10px;
 }
 
-#container_inputs>input:focus{
+.container_inputs>input:focus{
     outline:  none;
 }
 
-#submit{
+.submit{
     background-color: #0065FC;
     border: none;
     font-family: "relaway_bold";
@@ -67,6 +67,6 @@
     border-radius: 0px 15px 15px 0px;
 }
 
-#submit:hover{
+.submit:hover{
     cursor: pointer;
 }
