--- a/P2_PAYS_code/css/herbergements.css
+++ b/P2_PAYS_code/css/herbergements.css
@@ -1,4 +1,4 @@
-#container_hebergements{
+.container_hebergements{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -6,28 +6,32 @@
     
 }
 
-#background_gris{
+.background_gris{
     background-color: #F2F2F2;
     border-radius: 20px;
     padding: 35px;
     font-family: "relaway_bold";
     font-size:140% ;
-    width: 60%;
+    width: 75%;
 }
 
-.container_info{
+.container_hebergements_info{
     background-color: #fff;
     display: flex;
     height: 200px;
     width: 29%;
-    margin: 10px 5px;
+    margin: 15px 5px;
     padding: 5px 5px;
     border-radius: 20px;
     flex-direction: column;
+    box-shadow:   2px 2px 15px 3px rgba(0,0,0,0.3)
 }
 
-.img_haut_rond{
+.img_hebergement{
     border-radius: 15px 15px 0px 0px;
+    object-fit: cover;
+    width:100%;
+    height:65%;
 }
 
 .titre_chambre{
@@ -59,4 +63,19 @@
 
 .gris{
     color: #F2F2F2
+}
+
+.container_text_info{
+    margin: 0px 0px 0px 10px;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 5px 0px;
+}
+
+@media (max-width: 996px) {
+    .background_gris{
+        width: auto;
+    }
 }
