--- a/P2_PAYS_code/css/herbergements.css
+++ b/P2_PAYS_code/css/herbergements.css
@@ -74,6 +74,11 @@
     padding: 5px 0px;
 }
 
+.show_more_hebergement{
+    font-size:17px; 
+    padding: 20px 0px 0px 5px;
+}
+
 @media (max-width: 996px) {
     .background_gris{
         width: auto;
