--- a/P2_PAYS_code/css/popu.css
+++ b/P2_PAYS_code/css/popu.css
@@ -54,7 +54,7 @@
     padding: 10px 20px;
 }
 
-@media (max-width: 996px) {
+@media (max-device-width: 996px) and (min-device-width:768px) {
     .container_images_popu{
         flex-direction: row;
         flex-grow: 1;
@@ -82,5 +82,14 @@
         border-radius: 15px 15px 0px 0px;
         width:100%;
         height:65%;
+    }
+}
+
+@media (max-device-width: 768px) {
+    .container_gris_popu{
+        width: auto;
+        margin: 0px;
+        border-radius: 0px;
+        padding: 25px;
     }
 }
