--- a/P2_PAYS_code/css/activite.css
+++ b/P2_PAYS_code/css/activite.css
@@ -16,6 +16,7 @@
     align-items: center;
     justify-content: space-between;
 }
+
 .container_grand_img_activite{
     height: 100%;
     width: 22%;
@@ -63,4 +64,29 @@
     font-family: "relaway_bold";
     font-size:140%;
     margin: 50px 0px 0px 0px;
+}
+
+@media (max-device-width: 768px) {
+    .container_grand_img_activite{
+        width: 100%;
+        height: 250px;
+        margin: 10px 0px;
+    }
+    .container_activite{
+        flex-direction: column;
+        height: auto;
+        margin: 20px 25px 40px 25px;
+    }
+    .containers_petit_img_column_activite{
+        width: 100%;
+    }
+    .container_petit_img_activite{
+        height: 250px;
+        margin: 10px 0px;
+    }
+    .titre_activite{
+        margin: 0px 0px 0px 25px;
+        font-size:20px;
+
+    }
 }
