--- a/P2_PAYS_code/css/footer.css
+++ b/P2_PAYS_code/css/footer.css
@@ -1,10 +1,9 @@
-.footer{
+footer{
     display: flex;
     flex: 1;
     flex-direction: row;
     background-color: #F2F2F2;
     justify-content: space-between;
-    height: 230px;
 }
 
 .container_text_footer{
@@ -21,4 +20,21 @@
 .titre_footer{
     font-family: "relaway_bold";
     font-size: 18px;
+}
+
+@media (max-device-width: 768px) {
+    footer{
+        flex-direction: column;
+    }
+
+    .container_text_footer>a{
+        margin: 10px 0px;
+    }
+    
+    .container_text_footer{
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        margin: 25px;
+    }
 }
