--- a/P2_PAYS_code/css/search.css
+++ b/P2_PAYS_code/css/search.css
@@ -5,22 +5,16 @@
     height: 53px;
     margin-top: 20px;
     font-family: "relaway_bold";
-    font-size: 120% ;
+    font-size: 24px;
 }
 
 .container_inputs{
     display: flex;
-    
-}
-
-.separateur_inputs{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-bottom: solid 2px #F2F2F2;
     border-top: solid 2px #F2F2F2;
+    border-bottom: solid 2px #F2F2F2;
+    align-items:center ;
+    flex:1
 }
-
 .container_icon_localisation{
     display: flex;
     width: 50px;
@@ -33,12 +27,10 @@
 
 .container_inputs>input {
     border:none;
-    border-top: solid 2px #F2F2F2;
     width: 110px;
-    border-bottom: solid 2px #F2F2F2;
     font-family: "relaway_bold";
     font-size: 18px ;
-    color: .000;
+    color: #000;
     padding: 5px 0px;
 }
 
@@ -69,4 +61,29 @@
 
 .submit:hover{
     cursor: pointer;
+}
+
+@media (max-device-width: 768px) {
+    .container_inputs{
+        border-top: solid 1px #F2F2F2;
+        border-bottom: solid 1px #F2F2F2;
+    }
+
+    .container_inputs>input {
+        font-size: 16px;
+    }
+    .recherche{
+        height: 50px;
+    }
+
+    .submit{
+        background-color: #0065FC;
+        border: none;
+        font-family: "relaway_bold";
+        font-size: 18px ;
+        color: #fff;
+        padding: 0px 15px;
+        border-radius: 15px 15px 15px 15px;
+        width: 50px;
+    }
 }
