changement de certaines partie qui avait était cassé

--- a/P2_PAYS_code/css/filtres.css
+++ b/P2_PAYS_code/css/filtres.css
@@ -63,9 +63,10 @@
 }
 
 
-@media (max-device-width: 768px) {
+@media (max-width: 768px) {
     .container_filtres{
         flex-wrap: wrap;
+        justify-content: space-between
     }
 
     .container_filtres>p{
