--- a/P2_PAYS_code/css/footer.css
+++ b/P2_PAYS_code/css/footer.css
@@ -22,7 +22,7 @@ footer{
     font-size: 18px;
 }
 
-@media (max-device-width: 768px) {
+@media (max-width: 768px) {
     footer{
         flex-direction: column;
     }
