--- a/P2_PAYS_code/css/activite.css
+++ b/P2_PAYS_code/css/activite.css
@@ -66,7 +66,7 @@
     margin: 50px 0px 0px 0px;
 }
 
-@media (max-device-width: 768px) {
+@media (max-width: 768px) {
     .container_grand_img_activite{
         width: 100%;
         height: 250px;
