--- a/P2_PAYS_code/css/header.css
+++ b/P2_PAYS_code/css/header.css
@@ -2,7 +2,6 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
     flex:1;
 }
 
@@ -11,13 +10,13 @@ nav {
     flex-direction: row;
     width: 300px;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: flex-start;
 }
 
 .element_nav {
     display: flex;
     justify-content: center;
-    height: 65px;
+    height: 70px;
     padding: 0px 25px;
     align-items: flex-end;
 }
@@ -31,16 +30,19 @@ nav {
 }
 
 .container_logo{
-    align-self: flex-end;
-    margin-left: 15px;
+    display: flex;
+    width: 150px;
+    height: 75px;
+    margin: 60px 0px 0px 0px;
 }
 
 .logo_site{
-    width:50%;
-    height:45%;
+    width:100%;
+    height:100%;
+    object-fit: contain;
 }
 
-@media (max-device-width: 768px) {
+@media (max-width: 768px) {
     header{
         flex-direction: column;
         justify-content: center;
@@ -68,6 +70,7 @@ nav {
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 25px 0px 0px 0px
     }
 
     nav {   
@@ -76,8 +79,11 @@ nav {
         align-items: center;
     }
     
-    .logo_site{
-        width:35%;
-        height:30%;
+    .container_logo{
+        display: flex;
+        width: 90px;
+        height: 50px;
+        align-self: center;
+        margin: 15px 0px;
     }
 }
