--- a/P2_PAYS_code/css/search.css
+++ b/P2_PAYS_code/css/search.css
@@ -13,8 +13,9 @@
     border-top: solid 2px #F2F2F2;
     border-bottom: solid 2px #F2F2F2;
     align-items:center ;
-    flex:1
+    
 }
+
 .container_icon_localisation{
     display: flex;
     width: 50px;
@@ -63,10 +64,11 @@
     cursor: pointer;
 }
 
-@media (max-device-width: 768px) {
+@media (max-width: 768px) {
     .container_inputs{
         border-top: solid 1px #F2F2F2;
         border-bottom: solid 1px #F2F2F2;
+        flex:1
     }
 
     .container_inputs>input {
