responsive tablette ajouté + changement icon pour submit plus traduction des éléments écrits en français

--- a/P2_PAYS_code/css/footer.css
+++ b/P2_PAYS_code/css/footer.css
@@ -1,8 +1,14 @@
 footer{
     display: flex;
     flex: 1;
-    flex-direction: row;
     background-color: #F2F2F2;
+
+}
+
+.container_footer{
+    display: flex;
+    flex: 1;
+    flex-direction: row;
     justify-content: space-between;
 }
 
@@ -17,13 +23,13 @@ footer{
     margin: 10px 0px;
 }
 
-.titre_footer{
+.title_footer{
     font-family: "relaway_bold";
     font-size: 18px;
 }
 
 @media (max-width: 768px) {
-    footer{
+    .container_footer{
         flex-direction: column;
     }
 
