--- a/P2_PAYS_code/css/activity.css
+++ b/P2_PAYS_code/css/activity.css
@@ -1,5 +1,5 @@
 
-.container_activite{
+.container_activity{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -8,7 +8,7 @@
     margin: 15px 0px 40px 0px;
 }
 
-.containers_petit_img_column_activite{
+.containers_small_img_column_activity{
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -17,7 +17,7 @@
     justify-content: space-between;
 }
 
-.container_grand_img_activite{
+.container_huge_img_activity{
     height: 100%;
     width: 22%;
     display: flex;
@@ -28,7 +28,7 @@
     
 }
 
-.container_petit_img_activite{
+.container_small_img_activity{
     height: 45%;
     width: 100%;
     display: flex;
@@ -38,53 +38,53 @@
     border-radius: 15px 15px 15px 15px;
 }
 
-.img_activite{
+.img_activity{
     height: 85%;
     width: 100%;
     object-fit: cover;
     border-radius: 15px 15px 0px 0px;
 }
 
-.container_petit_img_activite>.img_activite{
+.container_small_img_activity>.img_activity{
     height: 70%;
 }
 
-.container_titre_lieu{
+.container_title_place{
     display: flex;
     flex:1;
     margin:15px
 }
 
-.container_titre_lieu>p{
+.container_title_place>p{
     font-family: "relaway_bold";
     font-size:15px;
 }
 
-.titre_activite{
+.title_activity{
     font-family: "relaway_bold";
-    font-size:140%;
+    font-size:20px;
     margin: 50px 0px 0px 0px;
 }
 
 @media (max-width: 768px) {
-    .container_grand_img_activite{
+    .container_huge_img_activity{
         width: 100%;
         height: 250px;
         margin: 10px 0px;
     }
-    .container_activite{
+    .container_activity{
         flex-direction: column;
         height: auto;
         margin: 20px 25px 40px 25px;
     }
-    .containers_petit_img_column_activite{
+    .containers_small_img_column_activity{
         width: 100%;
     }
-    .container_petit_img_activite{
+    .container_small_img_activity{
         height: 250px;
         margin: 10px 0px;
     }
-    .titre_activite{
+    .title_activity{
         margin: 0px 0px 0px 25px;
         font-size:20px;
 
