--- a/P2_PAYS_code/css/general.css
+++ b/P2_PAYS_code/css/general.css
@@ -8,6 +8,10 @@ a {
 }
 
 .first_container{
+    /* padding: 0px 25px; */
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 0px 25px;
 }
 
@@ -54,7 +58,7 @@ h3{
     border-radius: 50px;
 }
 
-.container_h_p{
+.container_l_p{
     display: flex;
     justify-content: space-between;
     flex:1;
@@ -62,12 +66,16 @@ h3{
     margin: 0px 0px 20px 0px;
 }
 
-.margin5{
-    margin: 5px;
+.show_in_desktop{
+    display: flex;
+}
+
+.show_in_mobile{
+    display: none;
 }
 
 @media (max-width: 996px) and (min-width:768px) {
-    .container_h_p{
+    .container_l_p{
         display: flex;
         justify-content: space-between;
         flex:1;
@@ -104,11 +112,19 @@ h3{
         margin: 5px 0px 0px 10px;
     }
     
-    .container_h_p{
+    .container_l_p{
         display: flex;
         justify-content: space-between;
         flex:1;
         flex-direction: column-reverse;
         margin: 0px 0px 20px 0px;
+    }
+
+    .show_in_desktop{
+        display: none;
+    }
+    
+    .show_in_mobile{
+        display: flex;
     }
 }
