--- a/P2_PAYS_code/css/lodging.css
+++ b/P2_PAYS_code/css/lodging.css
@@ -1,20 +1,20 @@
-.container_hebergements{
+.container_lodging{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
 
-.background_gris{
+.background_gray{
     background-color: #F2F2F2;
     border-radius: 20px;
     padding: 35px;
     font-family: "relaway_bold";
-    font-size:140% ;
+    font-size: 24px;
     width: 75%;
 }
 
-.container_hebergements_info{
+.container_lodging_info{
     background-color: #fff;
     display: flex;
     height: 200px;
@@ -26,30 +26,30 @@
     box-shadow:   2px 2px 15px 3px rgba(0,0,0,0.3)
 }
 
-.img_hebergement{
+.img_lodging{
     border-radius: 15px 15px 0px 0px;
     object-fit: cover;
     width:100%;
     height:65%;
 }
 
-.titre_chambre{
+.title_bedroom{
     font-family: "relaway_bold";
-    font-size:75% ;
+    font-size:18px;
 }
 
-.texte_info{
+.text_info{
     font-family: "relaway_regular";
     font-size:14px;
     margin: 0px;
 }
 
-.bon_prix{
+.good_price{
     font-family: "relaway_bold";
-    font-size:100% ;
+    font-size:14px;
 }
 
-.container_etoile{
+.container_stars{
     display: flex ;
     flex-direction: row ;
     font-size: 12px;
@@ -60,7 +60,7 @@
     color: #0065FC;
 }
 
-.gris{
+.gray{
     color: #F2F2F2
 }
 
@@ -73,25 +73,25 @@
     padding: 5px 0px;
 }
 
-.show_more_hebergement{
+.show_more_lodging{
     font-size:17px; 
     padding: 20px 0px 0px 5px;
 }
 
 @media (max-width: 996px) and (min-width:768px) {
-    .background_gris{
+    .background_gray{
         width: auto;
     }
 }
 
 
 @media (max-width: 768px) {
-    .background_gris{
+    .background_gray{
         background-color: #fff;
         padding: 25px;
         width: auto;
     }
-    .container_hebergements{
+    .container_lodging{
         display: flex;
         flex-wrap: nowrap;
         align-items: center;
@@ -99,27 +99,27 @@
         flex-direction: column;
         flex: 1;
     }
-    .container_hebergements_info{
+    .container_lodging_info{
         height: 175px;
         width: 100%;
         margin: 5px 0px;
     }
-    .texte_info{
+    .text_info{
         font-size: 12px;
     }
-    .titre_chambre{
+    .title_bedroom{
         font-size: 14px;
     }
-    .container_etoile{
+    .container_stars{
         font-size: 10px;
     }
 
-    .titre_container_hebergement{
+    .title_container_lodging{
         font-size: 20px;
         margin: 10px 0px ;
     }
 
-    .show_more_hebergement{
+    .show_more_lodging{
         font-size:14px; 
         padding: 20px 0px 0px 0px;
     }
