--- a/P2_PAYS_code/css/popular.css
+++ b/P2_PAYS_code/css/popular.css
@@ -1,16 +1,16 @@
-.container_gris_popu{
+.container_gray_popular{
     display: flex;
     flex-direction: column;
     background-color: #F2F2F2;
     border-radius: 20px;
     padding: 35px;
     font-family: "relaway_bold";
-    font-size:140% ;
+    font-size:20px ;
     width: 25%;
     margin: 0px 0px 0px 35px;
 }
 
-.container_titre_popu{
+.container_title_popular{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -18,7 +18,7 @@
     flex-grow: 1;
 }
 
-.container_images_popu{
+.container_images_popular{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -27,7 +27,7 @@
     margin: 15px 0px 0px 0px ;
 }
 
-.container_popu_info{
+.container_popular_info{
     background-color: #fff;
     display: flex;
     height: 125px;
@@ -39,14 +39,14 @@
     box-shadow:   2px 2px 15px 3px rgba(0,0,0,0.3)
 }
 
-.img_popu{
+.img_popular{
     border-radius: 15px 0px 0px 15px;
     object-fit: cover;
     width:35%;
     height:100%;
 }
 
-.container_tex_popu{
+.container_text_popular{
     display: flex;
     flex:1;
     flex-direction: column;
@@ -55,19 +55,19 @@
 }
 
 @media (max-width: 996px) and (min-width:768px) {
-    .container_images_popu{
+    .container_images_popular{
         flex-direction: row;
         flex-grow: 1;
         margin: 20px 0px 0px 0px ;
     }
 
-    .container_gris_popu{
+    .container_gray_popular{
         flex-grow: 1;
         width: auto;
         margin: 30px 0px 0px 0px;
     }
 
-    .container_popu_info{
+    .container_popular_info{
         background-color: #fff;
         display: flex;
         height: 200px;
@@ -78,15 +78,15 @@
         flex-direction: column;
         box-shadow:   2px 2px 15px 3px rgba(0,0,0,0.3)
     }
-    .img_popu{
+    .img_popular{
         border-radius: 15px 15px 0px 0px;
         width:100%;
-        height:65%;
+        height:60%;
     }
 }
 
 @media (max-width: 768px) {
-    .container_gris_popu{
+    .container_gray_popular{
         width: auto;
         margin: 0px;
         border-radius: 0px;
