--- a/P2_PAYS_code/css/activity.css
+++ b/P2_PAYS_code/css/activity.css
@@ -71,6 +71,7 @@
         width: 100%;
         height: 250px;
         margin: 10px 0px;
+        max-width: 400px;
     }
     .container_activity{
         flex-direction: column;
@@ -79,6 +80,7 @@
     }
     .containers_small_img_column_activity{
         width: 100%;
+        max-width: 400px;
     }
     .container_small_img_activity{
         height: 250px;
@@ -88,5 +90,13 @@
         margin: 0px 0px 0px 25px;
         font-size:20px;
 
+    }
+    .container_small_img_activity>.img_activity{
+        height: 85%;
+    }
+
+    .container_title_place{
+        margin:0px 5px;
+        align-items: center;
     }
 }
