--- a/P2_PAYS_code/css/footer.css
+++ b/P2_PAYS_code/css/footer.css
@@ -30,7 +30,10 @@ footer{
 
 @media (max-width: 768px) {
     .container_footer{
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center ;
+        justify-content: center;
     }
 
     .container_text_footer>a{
@@ -41,6 +44,8 @@ footer{
         display: flex;
         flex-direction: column;
         flex: 1;
-        margin: 25px;
+        margin: 25px 0px 25px 25px;
+        min-width: 350px;
+        max-width: 400px;
     }
 }
