--- a/P2_PAYS_code/css/general.css
+++ b/P2_PAYS_code/css/general.css
@@ -68,10 +68,12 @@ h3{
 
 .show_in_desktop{
     display: flex;
+    visibility: visible;
 }
 
 .show_in_mobile{
     display: none;
+    visibility: hidden;
 }
 
 @media (max-width: 996px) and (min-width:768px) {
@@ -122,9 +124,11 @@ h3{
 
     .show_in_desktop{
         display: none;
+        visibility: hidden;
     }
     
     .show_in_mobile{
         display: flex;
+        visibility: visible;
     }
 }
