--- a/P2_PAYS_code/css/lodging.css
+++ b/P2_PAYS_code/css/lodging.css
@@ -103,6 +103,8 @@
         height: 175px;
         width: 100%;
         margin: 5px 0px;
+        max-width: 400px;
+
     }
     .text_info{
         font-size: 12px;
