--- a/P2_PAYS_code/css/search.css
+++ b/P2_PAYS_code/css/search.css
@@ -70,7 +70,7 @@
     .container_inputs{
         border-top: solid 1px #F2F2F2;
         border-bottom: solid 1px #F2F2F2;
-        flex:1
+        max-width: 400;
     }
 
     .container_inputs>input {
@@ -78,6 +78,8 @@
     }
     .search{
         height: 50px;
+        flex:1;
+        justify-content: center;
     }
 
     .submit{
