--- a/P2_PAYS_code/css/search.css
+++ b/P2_PAYS_code/css/search.css
@@ -92,7 +92,7 @@
         border-radius: 15px 15px 15px 15px;
         width: 50px;
         position: relative;
-        right: 150;
+        right: 25px;
         z-index: 2;
     }
 }
