--- a/P3_PAYS_code/src/sass/main.css
+++ b/P3_PAYS_code/src/sass/main.css
@@ -237,6 +237,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 100%;
   -webkit-box-shadow: 0px 3px 12px 3px rgba(0, 0, 0, 0.22);
           box-shadow: 0px 3px 12px 3px rgba(0, 0, 0, 0.22);
 }
@@ -263,7 +264,7 @@
           justify-content: center;
   height: 30px;
   width: 100px;
-  left: 65%;
+  right: 10%;
   margin-top: 15px;
 }
 
