--- a/P3_PAYS_code/src/sass/pages/homepage.scss
+++ b/P3_PAYS_code/src/sass/pages/homepage.scss
@@ -119,6 +119,7 @@
         height: 275px;
         display: flex;
         flex-direction: column;
+        width: 100%;
         @include shadow-obj;
 
         &__image{
@@ -136,7 +137,7 @@
             justify-content: center;
             height: 30px;
             width: 100px;
-            left: 65%;
+            right: 10%;
             margin-top: 15px;
             &--text{
                 color: darken($color-tertiary,35%);
