--- a/P3_PAYS_code/src/sass/main.scss
+++ b/P3_PAYS_code/src/sass/main.scss
@@ -4,3 +4,4 @@
 @import "./pages/homepage.scss";
 @import "./components/button.scss";
 @import "./layout/footer.scss";
+@import "./pages/menu.scss";
