--- a/P3_PAYS_code/src/sass/base/general.scss
+++ b/P3_PAYS_code/src/sass/base/general.scss
@@ -22,3 +22,17 @@
     width: 100%;
     object-fit: contain;
 }
+
+a{
+    color: black;
+    text-decoration: none;
+}
+.gray{
+    background-color: $color-gray;
+}
+
+.text_trunc{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
