--- a/P3_PAYS_code/src/sass/pages/menu.scss
+++ b/P3_PAYS_code/src/sass/pages/menu.scss
@@ -5,6 +5,7 @@
     position: relative;
     bottom: 55px;
     border-radius: 35px 35px 0px 0px;
+    transition:all 200ms ease-in-out;
     &-title{
         &__info{
             display: flex;
@@ -14,7 +15,8 @@
             margin-bottom: 25px;
         }
         &__text{
-            font-size: 24px;
+            font-size: 26px;
+            font-weight: 500;
         }
     }
     &-item{
@@ -23,6 +25,7 @@
         height: 75px;
         border-radius: 20px;
         margin: 10px 0px;
+        justify-content: flex-end;
         @include shadow-obj;
         overflow: hidden;
         &__container{
@@ -33,7 +36,7 @@
             padding: 15px 15px;
             min-width:60%;
         }
-        
+
         &__text{
             font-size: 20px;
             font-weight: bold;
@@ -48,16 +51,16 @@
         &__price{
             font-size: 15px;
             font-weight: bold;
+            margin: 0px 5px;
         }
 
-        &__check{
+        &:active  .check,&:hover  .check {
+            transform: scale(1,1);
             min-width: 75px;
-            background-color: $color-tertiary;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 30px;
-            color: white;
+
+            > .check--anime{
+                transform: translate(0,0)  rotate(720deg);
+            }
         }
         
     }
@@ -78,4 +81,23 @@
     background-color: $color-tertiary;
     width: 40px;
     margin: 5px 0px;
+}
+
+.check{
+    width: 0px;
+    background-color: $color-tertiary;
+    transform: scale(0,1);
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    transform-origin:right 50%;
+    transition: all 500ms ease-in-out ;
+    &--anime{
+        color: white;
+        font-size: 30px;
+        transform: translate(100px,0);
+        display: block;
+        transform-origin:center;
+        transition:all 650ms ease-in-out
+    }
 }
