--- a/P3_PAYS_code/src/sass/pages/homepage.scss
+++ b/P3_PAYS_code/src/sass/pages/homepage.scss
@@ -3,57 +3,62 @@
     align-items: center;
     justify-content: center;
     height: 50px;
-    background-color: darken($color-gray,5%);
-    border-top: 2px solid darken($color-gray, 15%) ;
-    &__item{
+    background-color: darken($color-gray, 5%);
+    border-top: 2px solid darken($color-gray, 15%);
+
+    &__item {
         display: flex;
         align-items: flex-end;
         justify-content: center;
-        &--text{
-            color: darken( $color-gray, 70%) ;
+
+        &--text {
+            color: darken($color-gray, 70%);
             font-weight: bold;
             font-size: 16px;
         }
-        &--icon{
+
+        &--icon {
             margin-right: 15px;
             font-size: 20px;
         }
     }
 }
 
-.container-explain{
+.container-explain {
     height: 175px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    background-color:$color-gray ;
+    background-color: $color-gray;
     padding: 8%;
-    &__text{
+
+    &__text {
         text-align: center;
     }
-    &__sentences{
+
+    &__sentences {
         font-size: 16px;
         text-align: center;
-        color : darken($color-gray, 50%) ;
-        margin-top:10px ;
+        color: darken($color-gray, 50%);
+        margin-top: 10px;
     }
 }
 
-.functioning{
+.functioning {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 25px 20px;
 
-    &-text{
+    &-text {
         margin: 20px 0px;
     }
 
-    &-item{
+    &-item {
         display: flex;
         align-items: center;
-        background-color:$color-gray ;
+        background-color: $color-gray;
         margin: 10px 0px;
         border-radius: 25px;
         height: 65px;
@@ -61,11 +66,11 @@
 
         @include shadow-obj;
 
-        &--active{
-            background-color: rgba($color-primary,0.1)
+        &--active {
+            background-color: rgba($color-primary, 0.1)
         }
-        
-        &__circle{
+
+        &__circle {
             position: absolute;
             height: 20px;
             width: 20px;
@@ -75,27 +80,29 @@
             align-items: center;
             justify-content: center;
             left: 3%;
-            >p{
+
+            >p {
                 color: white;
                 font-size: 12px;
             }
         }
 
-        &__info{
+        &__info {
             display: flex;
             flex-direction: row;
             align-items: center;
 
-            &--icon{
-                color : darken($color-gray, $amount: 50) ;
+            &--icon {
+                color: darken($color-gray, $amount: 50);
                 font-size: 18px;
-                margin-right: 20px ;
-                &--active{
+                margin-right: 20px;
+
+                &--active {
                     color: $color-primary
                 }
             }
 
-            &--text{
+            &--text {
                 font-weight: bold;
                 font-size: 16px;
             }
@@ -103,16 +110,18 @@
     }
 }
 
-.restaurant{
+.restaurant {
     background-color: $color-gray;
     display: flex;
     flex-direction: column;
     padding: 15px;
-    &-text{
-        margin-top: 25px ;
+
+    &-text {
+        margin-top: 25px;
         margin-bottom: 15px;
     }
-    &-item{
+
+    &-item {
         border-radius: 15px;
         background-color: white;
         margin: 10px 0px;
@@ -122,14 +131,14 @@
         width: 100%;
         @include shadow-obj;
 
-        &__image{
+        &__image {
             border-radius: 15px 15px 0px 0px;
             object-fit: cover;
-            width:100%;
-            height:75%;
+            width: 100%;
+            height: 75%;
         }
 
-        &__new{
+        &__new {
             position: absolute;
             background-color: $color-tertiary;
             display: flex;
@@ -139,33 +148,58 @@
             width: 100px;
             right: 10%;
             margin-top: 15px;
-            &--text{
-                color: darken($color-tertiary,35%);
+
+            &--text {
+                color: darken($color-tertiary, 35%);
                 font-weight: bold;
             }
         }
     }
 }
 
-.item-info{
+.item-info {
     display: flex;
     justify-content: space-between;
     // align-items: center;
-    flex:1;
+    flex: 1;
     padding: 5px 20px 5px 10px;
-    &__title{   
-        display:flex;
+
+    &__title {
+        display: flex;
         flex-direction: column;
         justify-content: space-around;
-        &--text{
+
+        &--text {
             font-weight: bold;
             font-size: 18px
         }
     }
-    &__heart{
-        color:black;
+
+    &__heart {
+        color: black;
         align-items: center;
         display: flex;
         font-size: 24px;
+        z-index: 1;
+        position: relative;
+        &:active, &:hover {
+            + .heart--active{
+                z-index: 2;
+                opacity: 1;
+            }
+        }
     }
+}
+
+.heart--active{
+    position: absolute;
+    color: $color-primary;
+    align-items: center;
+    font-size: 24px;
+    left: 84.95%;
+    margin-top: 3px;
+    opacity: 0;
+    z-index: 0;
+    transform-origin: bottom;
+    transition: opacity 500ms linear;
 }
