--- a/P3_PAYS_code/src/sass/utils/_variables.scss
+++ b/P3_PAYS_code/src/sass/utils/_variables.scss
@@ -8,14 +8,18 @@ $font-title-family : "shrikand";
 
 @font-face {
     font-family: "shrikand" ;
-    src: url(../../../fonts/shrikhand/Shrikhand-Regular.ttf) ;
+    src: url(./../../fonts/shrikhand/Shrikhand-Regular.ttf) ;
 }
 
 @font-face {
     font-family: "roboto-regular" ;
-    src: url(../../../fonts/roboto/Roboto-Regular.ttf) ;
+    src: url(./../../fonts/roboto/Roboto-Regular.ttf) ;
 }
 
 @mixin shadow-obj {
     box-shadow: 0px 3px 12px 3px rgba(0,0,0,0.18);
+}
+
+@mixin shadow-obj_max {
+    box-shadow: 0px 3px 12px 3px rgba(0,0,0,0.35);
 }
