--- a/P3_PAYS_code/src/sass/main.scss
+++ b/P3_PAYS_code/src/sass/main.scss
@@ -5,3 +5,4 @@
 @import "./components/button.scss";
 @import "./layout/footer.scss";
 @import "./pages/menu.scss";
+@import "./components/heart.scss";
