--- a/P3_PAYS_code/src/sass/pages/homepage.scss
+++ b/P3_PAYS_code/src/sass/pages/homepage.scss
@@ -71,7 +71,7 @@
         }
 
         &__circle {
-            position: absolute;
+            position: relative;
             height: 20px;
             width: 20px;
             background-color: $color-primary;
@@ -79,8 +79,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            left: 3%;
-
+            right:18%;
             >p {
                 color: white;
                 font-size: 12px;
@@ -129,6 +128,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+        position: relative;
         @include shadow-obj;
 
         &__image {
@@ -146,9 +146,8 @@
             justify-content: center;
             height: 30px;
             width: 100px;
-            right: 10%;
-            margin-top: 15px;
-
+            right: 7%;
+            top:7%;
             &--text {
                 color: darken($color-tertiary, 35%);
                 font-weight: bold;
@@ -160,46 +159,16 @@
 .item-info {
     display: flex;
     justify-content: space-between;
-    // align-items: center;
     flex: 1;
     padding: 5px 20px 5px 10px;
-
+    position: relative;
     &__title {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-
         &--text {
             font-weight: bold;
             font-size: 18px
         }
     }
-
-    &__heart {
-        color: black;
-        align-items: center;
-        display: flex;
-        font-size: 24px;
-        z-index: 1;
-        position: relative;
-        &:active, &:hover {
-            + .heart--active{
-                z-index: 2;
-                opacity: 1;
-            }
-        }
-    }
-}
-
-.heart--active{
-    position: absolute;
-    color: $color-primary;
-    align-items: center;
-    font-size: 24px;
-    left: 84.95%;
-    margin-top: 3px;
-    opacity: 0;
-    z-index: 0;
-    transform-origin: bottom;
-    transition: opacity 500ms linear;
 }
