--- a/P3_PAYS_code/src/sass/main.scss
+++ b/P3_PAYS_code/src/sass/main.scss
@@ -6,3 +6,4 @@
 @import "./layout/footer.scss";
 @import "./pages/menu.scss";
 @import "./components/heart.scss";
+@import "./components/loader.scss";
